--- a/tools/msp_oases/README
+++ b/tools/msp_oases/README
@@ -1,3 +1,9 @@
+# 15/04/2017
+The tool now uses bioconda dependencies
+        <requirement type="package" version="0.2.09">oases</requirement>
+        <requirement type="package" version="1.2.10">velvet</requirement>
+As the output is not deterministic, test search for line matching oases locus ranging in 1-25
+
 #Created 28/11/2014
 #Christophe Antoniewski, CNRS/University Pierre et Marie Curie, drosofff@gmail.com
 # inspired from the oases wrapper developped by Konrad Paszkiewicz, Exeter Sequencing Service, University of Exeter 
