--- a/tools/oases/README
+++ b/tools/oases/README
@@ -1,3 +1,10 @@
+# 13/02/2024
+The version 1.4.0+galaxy0 of the tool uses bioconda dependencies
+        <requirement type="package" version="0.2.09">oases</requirement>
+        <requirement type="package" version="1.2.10">velvet</requirement>
+        <requirement type="package" version="3.12.1">python</requirement>
+
+
 # 15/04/2017
 The tool now uses bioconda dependencies
         <requirement type="package" version="0.2.09">oases</requirement>
